@@ -1,3 +1,7 @@
+2004-05-31  Bruno Haible  <bruno@clisp.org>
+
+	* clos.lisp: Reorder method and method combination includes.
+
 2004-06-10  Bruno Haible  <bruno@clisp.org>
 
 	* trace.lisp (tracer): Add max-depth slot.
